Updated CSS format

--- a/index.html
+++ b/index.html
@@ -5,7 +5,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
+    <style>
+        form {
+    border: 3px solid #f1f1f1;
+    background-color: lightgreen;
+  }
+  .form h1 {
+      text-align: center;
+  }
+  .container {
+    padding: 15px;
+  }
+ .container > input {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid dark;
+    box-sizing: border-box;
+    text-align: center;
+  }
+  button {
+    background-color: darkslateblue;
+    color: #fff;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+  }
+  button:hover {
+    opacity: 0.8;
+  }
+
+/* FORM */
+table, th, td {
+    border: 1px solid black;
+    text-align: center;
+}
+th {
+    background-color: darkslategray;
+    color: #fff;
+    padding: 15px
+}
+table {
+    width: 100%;
+}
+td {
+    padding: 15px;
+}
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+} 
+tr:hover {
+    background-color: gray;
+    color: #fff;
+}
+    </style>
 </head>
 <body>
     <form method="get" action="patient.html">
