[Exploring] Minor changes

--- a/patient.html
+++ b/patient.html
@@ -34,7 +34,7 @@
                 <td>Ebio</td>
                 <td>March 14, 2001</td>
                 <td> 20 years old</td>
-                <td>kevindavidsonebio@gmail.com</td>
+                <td>kevindavidsonebio1@gmail.com</td>
             </tr>
             <tr>
                 <td>Kevin</td>
